<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CLR_fundo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="327dp"
        android:layout_marginTop="140dp"
        android:foreground="@mipmap/teste_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_Ajuda"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/CLR_botao"
        android:text="@string/STR_ajuda"
        android:textColor="@color/CLR_escrever"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_Comecar"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/Btn_Comecar"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/CLR_botao"
        android:text="@string/STR_Comecar"
        android:textColor="@color/CLR_escrever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/STR_version"
        android:textColor="@color/CLR_escrever"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>