<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CLR_fundo"
    tools:context=".timer_game">

    <TextView
        android:id="@+id/Txt_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:background="@color/CLR_fundo_aviso"
        android:padding="5sp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/CLR_escrever"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_espiao"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/CLR_botao"
        android:text="@string/STR_local"
        android:textAlignment="center"
        android:textColor="@color/CLR_escrever"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Btn_expulsar"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="@color/CLR_botao"
        android:text="@string/STR_expulsar"
        android:textAlignment="center"
        android:textColor="@color/CLR_escrever"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Btn_baixo"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/CLR_botao"
        android:text="@string/STR_seguint"
        android:textAlignment="center"
        android:textColor="@color/CLR_escrever"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Etxt_adivinhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/CLR_botao"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/CLR_escrever"
        android:hint="@string/STR_expJogador"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Btn_expulsar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="201dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/teste_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/STR_version"
        android:textColor="@color/CLR_escrever"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/SPN_locais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:isScrollContainer="true"
        android:keepScreenOn="true"
        android:popupBackground="@color/CLR_fundo_aviso"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/Btn_espiao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>